--- a/project.json
+++ b/project.json
@@ -3,9 +3,9 @@
     "description": "A fancy uptime reader that makes a nicer output than the uptime command.",
     "version": "",
     "main_file": "src/main.cpp",
-    "author": "Lewis Evans",
+    "author": "0x4248",
     "license": "GNU General Public License v3.0",
-    "url": "https://www.github.com/lewisevans2007/fancy_uptime",
+    "url": "https://www.github.com/0x4248/fancy_uptime",
     "email": "none",
     "languages": [
         "c++",
